--- a/src/locales/en-US/translation.json
+++ b/src/locales/en-US/translation.json
@@ -35,7 +35,7 @@
             "linkedin-link": "https://linkedin.com/phscyberlab",
             "yt-link": "https://youtube.com/phscyberlab",
             "github-link": "https://github.com/phscyberlab",
-            "discord-link": "https://discord.gg/",
+            "discord-link": "https://discord.gg/rsgZC9q9XS",
             "email-address": "contact@phscyberlab.org",
             "contact-form-title": "Send Your Message",
             "contact-form-name": "Your Name",
